# Alchemist

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  alchemist.db  build.rs  index.html  rustfmt.toml  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
alchemist/: Cargo.toml  alchemist.db  build.rs  index.html
alchemist/migrations/20160522192308_add_freebsd_support/: up.sql
alchemist/src/: macros.rs  main.rs  pkg_manager.rs
alchemist/src/alchemy/: arch.rs  db.rs  distro.rs  lib.rs  models.rs  transmute.rs
alchemist_server/: .env  Cargo.toml  build.rs
alchemist_server/alchemy/: distro.rs  su.rs  transmute.rs
alchemist_server/migrations/20160521231606_add_mint_support/: up.sql
alchemist_server/migrations/20170317144416_packages/: up.sql
alchemist_server/src/: db.rs  lib.rs  main.rs  models.rs  server_routes.rs
alchemist_server/tests/: lib.rs  web_server_request.rs
alchemy/: index.html  sidebar-items.js
alchemy/arch/: fn.arch_install.html  fn.aur.html  fn.pacman.html  fn.refresh_list.html  fn.upgrade_packages.html  index.html  sidebar-items.js
alchemy/db/: fn.establish_connection.html  fn.pack_query.html  index.html  sidebar-items.js
alchemy/distro/: enum.Distro.html  fn.which_distro.html  index.html  sidebar-items.js
alchemy/models/: index.html  sidebar-items.js  struct.Package.html
alchemy/schema/: index.html  sidebar-items.js
alchemy/su/: fn.has_sudo.html  fn.is_root.html  index.html  sidebar-items.js
alchemy/void/: fn.refresh_list.html  fn.upgrade_packages.html  fn.void_install.html  fn.xbps.html  index.html  sidebar-items.js
byteorder/: trait.ByteOrder.html
ci/: after_build.sh  before_deploy.sh  documentation.sh  install.sh  install_job_specific_deps.sh  osx.sh  rustfmt.sh  script.sh  tests.sh
diesel/: fn.delete.html  fn.insert.html  fn.select.html  fn.update.html  index.html  macro.Insertable!.html  macro.debug_sql!.html  macro.impl_query_id!.html  macro.infix_predicate!.html  macro.no_arg_sql_function!.html  macro.numeric_expr!.html  macro.operator_allowed!.html  macro.postfix_expression!.html  macro.postfix_predicate!.html  macro.print_sql!.html  macro.sql_function!.html  macro.table!.html  sidebar-items.js
diesel/associations/: index.html  trait.BelongsTo.html  trait.GroupedBy.html  trait.Identifiable.html
diesel/backend/: index.html  struct.Debug.html  trait.Backend.html  trait.SupportsDefaultKeyword.html  trait.SupportsReturningClause.html  trait.TypeMetadata.html
diesel/connection/: index.html  trait.Connection.html  trait.SimpleConnection.html
diesel/data_types/: index.html
diesel/expression/: index.html  trait.AsExpression.html  trait.BoxableExpression.html  trait.Expression.html  trait.NonAggregate.html  trait.SelectableExpression.html
diesel/helper_types/: index.html  type.Filter.html  type.FindBy.html  type.Limit.html  type.Offset.html  type.Order.html  type.Select.html  type.With.html
diesel/migrations/: enum.MigrationError.html  enum.RunMigrationsError.html  fn.find_migrations_directory.html  fn.migration_from.html  fn.revert_latest_migration.html  fn.run_migrations.html  fn.run_pending_migrations.html  fn.search_for_migrations_directory.html  index.html  trait.Migration.html  trait.MigrationConnection.html
diesel/pg/: index.html  struct.Pg.html  struct.PgConnection.html  struct.PgQueryBuilder.html  struct.PgTypeMetadata.html
diesel/prelude/: index.html  trait.BelongingToDsl.html  trait.BoxedDsl.html  trait.CountDsl.html  trait.DistinctDsl.html  trait.ExecuteDsl.html  trait.FilterDsl.html  trait.FindDsl.html  trait.GroupByDsl.html  trait.Insertable.html  trait.JoinTo.html  trait.LimitDsl.html  trait.LoadDsl.html  trait.OffsetDsl.html  trait.OrderDsl.html  trait.SaveChangesDsl.html  trait.SelectDsl.html  trait.WithDsl.html
diesel/query_builder/: index.html  struct.BoxedSelectStatement.html  struct.IncompleteInsertStatement.html  struct.IncompleteUpdateStatement.html  trait.AsChangeset.html  trait.AsQuery.html  trait.Changeset.html  trait.Query.html  trait.QueryBuilder.html  trait.QueryFragment.html  trait.QueryId.html  trait.UpdateTarget.html  type.BuildQueryResult.html
diesel/query_source/: index.html  trait.Column.html  trait.JoinTo.html  trait.Queryable.html  trait.Table.html
diesel/result/: enum.ConnectionError.html  enum.Error.html  enum.TransactionError.html  index.html  trait.OptionalExtension.html  type.ConnectionResult.html  type.QueryResult.html  type.TransactionResult.html
diesel/types/: enum.IsNull.html  index.html  struct.Array.html  struct.BigInt.html  struct.Binary.html  struct.Bool.html  struct.Date.html  struct.Double.html  struct.Float.html  struct.Integer.html  struct.Interval.html  struct.Nullable.html  struct.Numeric.html  struct.Oid.html  struct.SmallInt.html  struct.Text.html  struct.Time.html  struct.Timestamp.html  (+13 more)
diesel_codegen/: fn.register.html  index.html
docs/: contributing.md
dotenv/: enum.DotenvError.html  fn.dotenv.html  fn.from_filename.html  fn.from_path.html  index.html
dotenv_codegen/: fn.register.html  index.html
dotenv_macros/: fn.plugin_registrar.html  index.html
pq_sys/: struct.Struct_Unnamed7.html  struct.Struct__PQconninfoOption.html  struct.Struct__PQprintOpt.html  struct.Struct_pgNotify.html  struct.Struct_pgresAttDesc.html  struct.Union_Unnamed8.html  type.PQnoticeProcessor.html  type.PQnoticeReceiver.html  type.pgthreadlock_t.html
regex/: struct.CaptureNames.html  struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SetMatchesIntoIter.html  struct.SetMatchesIter.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
scripts/: arch_setup.sh  debian_setup.sh  freebsd_setup.sh  mint_setup.sh  ubuntu_setup.sh  void_setup.sh
tests/: lib.rs
utf8_ranges/: struct.Utf8Sequences.html
vec_map/: struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.Keys.html  struct.Values.html
(+544 files in other folders)
