[package]
name = "Alchemist"
version = "0.0.2"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
repository = "https://github.com/mgattozzi/Alchemist"
homepage = "https://github.com/mgattozzi/Alchemist"
documentation = "http://mgattozzi.github.io/Alchemist"
readme = "README.md"
license = "BSD3"

[lib]
name = "alchemy"
path = "src/alchemy/lib.rs"

[[bin]]
name = "alchemist"
path = "src/bin/alchemist.rs"

[dependencies]
clap               = "*"
diesel             = { git = "https://github.com/diesel-rs/diesel.git", features=["postgres"] }
diesel_codegen     = { git = "https://github.com/diesel-rs/diesel.git", default-features = false, features=["nightly", "postgres"] }
dotenv             = "*"
dotenv_macros      = "*"
clippy             = { git = "https://github.com/Manishearth/rust-clippy.git" }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
