[package]
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
build = "build.rs"
documentation = "http://mgattozzi.github.io/alchemist"
homepage = "https://github.com/mgattozzi/alchemist"
license = "MIT OR Apache-2.0"
name = "Alchemist"
readme = "README.md"
repository = "https://github.com/mgattozzi/alchemist"
version = "0.4.0"

[[bin]]
name = "alchemist"
path = "src/bin/alchemist.rs"

[dependencies]
clap = "^2.20"
diesel = { version = "^0.10.0", features = ["sqlite"] }
diesel_codegen = { version = "^0.10.0", features = ["sqlite"] }
dotenv = "^0.8.0"

[lib]
name = "alchemy"
path = "src/alchemy/lib.rs"
