[package]
authors = ["Michael Gattozzi <mgattozzi@gmail.com>", "Benjamin Hoffmeyer <hoffmeyer25@gmail.com>"]
documentation = "http://mgattozzi.github.io/alchemist"
homepage = "https://github.com/mgattozzi/alchemist"
license = "MIT OR Apache-2.0"
name = "alchemist"
readme = "README.md"
repository = "https://github.com/mgattozzi/alchemist"
version = "0.4.0"

[dependencies]
clap = "^2.20"
error-chain = "^0.9.0"

[dependencies.clippy]
version = "*"
optional = true

[features]
default = []
dev = ["clippy"]
